--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="博客來、誠品、金石堂、墊腳石、讀冊生活、天瓏最新電腦類書籍"/>
-    <title>🪲BookBug</title>
+    <title>🪲書蟲</title>
   </head>
   <body>
     <div id="root"></div>
